--- a/src/workshops/2020-04-10-faust-101.md
+++ b/src/workshops/2020-04-10-faust-101.md
@@ -21,9 +21,9 @@ If ever the sounds produced with the IDE are of poor quality, with some clicks, 
 ## Faust in a few words
 
 - Faust is a Domain-Specific Language for real-time signal processing and synthesis (like Csound, Max/MSP, Supercollider, Puredata,. . . ).
-- Faust is based on purely functional approach
+- Faust is based on purely functional approach.
 - A Faust program denotes a signal processor : a function that maps input signals to output signals.
-- Programming in Faust is essentially combining signal processors using an algebra of 5 composition operations: `<: :> : , ~`
+- Programming in Faust is essentially combining signal processors using an algebra of 5 composition operations: `<: :> : , ~`.
 - Faust is a compiled language, the role of the Faust compiler is to synthesize the most efficient implementations.
 - Faust offers end-users a high-level alternative to C to develop audio applications for a large variety of platforms.
 
@@ -51,7 +51,7 @@ Let's try this program using the online Faust IDE...
 
 ### Example 2: Adding two signals
 
-We saw in the previous example the primitive `_`. Faust has a large number of primitives, including all mathematical operations (see ).
+We saw in the previous example the primitive `_`. Faust has a large number of primitives, including all [mathematical operations] (https://faustdoc.grame.fr/manual/syntax/#faust-syntax).
 
 The `+` primitive for instance is used to add two signals. It can therefore be used to transform a stereophonic signal (on two channels) into a monophonic signal as in the following example:
 
@@ -65,7 +65,7 @@ process = +;
 
 ### Example 3: Multiplying two signals
 
-The `*` primitive for instance is used to multiply two signals. 
+The `*` primitive for instance is used to multiply two signals:
 
 <!-- faust-run -->
 ```
@@ -107,7 +107,6 @@ The primitives of Faust are organized in several categories. We find all the num
 | GUI               | `hslider()`, `button()`, ...   |
 
 
-
 Here is a summary table of the five composition operators:
 
 | Syntax   | Priority  | Association  | Description             |
@@ -117,7 +116,6 @@ Here is a summary table of the five composition operators:
 | `A : B`  | 2         | right        | Sequential Composition  |
 | `A <: B` | 1         | right        | Split Composition       |
 | `A :> B` | 1         | right        | Merge Composition       |
-
 
 
 ### Example 5: Controlling the volume
@@ -142,7 +140,7 @@ But, just as in `(2*3)+7` were the parentheses are not really necessary because 
 
 ### Example 6: Controlling the volume with a slider
 
-Instead of controlling the volume by editing the code, it is far more convenient to use a graphical slider. For that purpose we can use a `hslider(...)`, a horizontal slider. It takes five parameters. The first one is the name `"volume"`, then we have the defaut value `0.1`, the mimimun value `0`, the maximum value `1` and a step value `0.1`. So here the default value is `0.1` 
+Instead of controlling the volume by editing the code, it is far more convenient to use a graphical slider. For that purpose we can use a `hslider(...)`, a horizontal slider. It takes five parameters. The first one is the name `"volume"`, then we have the defaut value `0.1`, the mimimun value `0`, the maximum value `1` and a step value `0.1`. So here the default value is `0.1`:
 
 <!-- faust-run -->
 ```
@@ -152,21 +150,21 @@ process = _, hslider("volume", 0.1, 0, 1, 0.01) : *;
 
 ### Example 7: Mono Amplifier
 
-We have written very simple programs so far, that fit into one line of code. We will now introduce additional definitions. A definition should be understood as a way of giving a name to something, which saves us from typing the definition every time and makes the program easier to understand.
- 
+We have written very simple programs so far, that fit into one line of code. We will now introduce additional definitions. A definition should be understood as a way of giving a name to something, which saves us from typing the definition every time and makes the program easier to understand:
+
 
 <!-- faust-run -->
 ```
 monoamp = _, hslider("volume", 0.1, 0, 1, 0.01) : *;
 process = monoamp;
 ```
-<!-- /faust-run -->
 
+<!-- /faust-run -->
 
 
 ### Example 8: Stereo Amplifier
  
-Continuing in the same vein, we will define a stereo amplifier as two mono amplifiers in parallel.
+ Continuing in the same vein, we will define a stereo amplifier as two mono amplifiers in parallel:
 
 <!-- faust-run -->
 ```
@@ -177,13 +175,13 @@ process = stereoamp;
 ```
 <!-- /faust-run -->
 
-Note that even if the hslider volume appears several times in our code, there will only be one in the user interface.
+Note that even if the hslider volume appears several times in our code, there will only be one in the user interface:
 
 
 
 ### Example 9: Vertical sliders
 
-Instead of horizontal sliders, we could use vertical sliders. Just replace hslider(...) with vslider(...).
+Instead of horizontal sliders, we could use vertical sliders. Just replace `hslider(...)` with `vslider(...)`:
 
 <!-- faust-run -->
 ```
@@ -192,15 +190,14 @@ stereoamp = monoamp,monoamp;
 
 process = stereoamp;
 ```
+
 <!-- /faust-run -->
-
-
 
 ### Example 10: Knobs instead of sliders
 
 By default sliders are ... sliders! You can change their appearance by using the metadata mechanism. 
 
-Metadata is information that you put in square brackets in the slider name. For example the metadata "...[style:knob]..." allows you to turn the slider into a rotary knob.
+Metadata is information that you put in square brackets in the slider name. For example the metadata `"...[style:knob]..."` allows you to turn the slider into a rotary knob:
 
 <!-- faust-run -->
 ```
@@ -210,8 +207,8 @@ stereoamp = monoamp,monoamp;
 
 process = stereoamp;
 ```
-<!-- /faust-run -->
 
+<!-- /faust-run -->
 
 ### Example 11: Syntactic sugar
 
@@ -229,11 +226,7 @@ process = stereoamp;
 ```
 <!-- /faust-run -->
 
-Here is a table of equivalent notations. Keep in mind that infix and prefix expressions are translated to core syntax.
-
-
-
-Here is a table with the same expression in all three syntaxes.
+Here is a table of equivalent notations, with the same expression in all three syntaxes. Keep in mind that infix and prefix expressions are translated to core syntax:
 
 | Expression | Description             |
 | ---------- | ----------------------- |
@@ -250,12 +243,11 @@ These notations can be freely combined. For example, the following expressions a
 | `_,(1,m:-):*` | core syntax             |
 
 
-
 ### Example 12: A _mute_ button
 
 We would like to be able to mute the sound completely at the touch of a button, without having to change the volume. 
 
-Let's add a mute stage to our mono amplifier. In order to mute the signal we just have to mutiply it by 0. We will use for that purpose a `checkbox(...)`, a user interface element that produces a signal which is 0 by default and 1 when it is checked. As we want to multiply the signal by 0 when the checkbox is checked we will use `1-checkbox ("mute")`.
+Let's add a mute stage to our mono amplifier. In order to mute the signal we just have to mutiply it by 0. We will use for that purpose a `checkbox(...)`, a user interface element that produces a signal which is 0 by default and 1 when it is checked. As we want to multiply the signal by 0 when the checkbox is checked we will use `1-checkbox("mute")`:
 
 <!-- faust-run -->
 ```
@@ -281,7 +273,7 @@ mute = *(1-checkbox("mute"));
 
 monoamp = *(vslider("volume[style:knob]", 0.1, 0, 1, 0.01)) : mute;
 
-stereoamp = hgroup("Marshall", monoamp,monoamp);
+stereoamp = hgroup("Marshall",monoamp,monoamp);
 
 process = stereoamp;
 ```
@@ -291,7 +283,7 @@ process = stereoamp;
 
 ### Example 14: Differentiate the volume of the two channels
 
-To differentiate the volume control of our two channels, we will parametrize monoamp with a channel number `c` which will be used to differentiate the name of each volume control. Note that the name `c` of the parameter must only have one letter to be well interpreted in the slider name `"volume %c[style:knob]"`.
+To differentiate the volume control of our two channels, we will parametrize monoamp with a channel number `c` which will be used to differentiate the name of each volume control. Note that the name `c` of the parameter must only have one letter to be well interpreted in the slider name `"volume %c[style:knob]"`:
 
 <!-- faust-run -->
 ```
@@ -299,20 +291,18 @@ mute = *(1-checkbox("mute"));
 
 monoamp(c) = *(vslider("volume %c[style:knob]", 0.1, 0, 1, 0.01)) : mute;
 
-stereoamp = hgroup("Marshall", monoamp(0),monoamp(1));
+stereoamp = hgroup("Marshall",monoamp(0),monoamp(1));
 
 process = stereoamp;
 ```
 <!-- /faust-run -->
 
 
-
-
 ### Example 15: Having many channels
 
 We have built a stereo amp, but suppose we wanted to generalize this construction to an arbitrary number of channels. To do so, we will instroduce the `par(i, N, ...)` construction which allows us to put several times an expression in parallel. It is in a way the equivalent of the for() loop of a classical programming language. 
 
-In our case we want to indicate the number of channels of our amplifier.
+In our case we want to indicate the number of channels of our amplifier:
 
 
 <!-- faust-run -->
@@ -331,11 +321,11 @@ process = multiamp(2); // try multiamp(4)
 ## Part 2: Delays and Feedbacks
 <img src="img/bande-feedback.png" width="100%" class="mx-auto d-block">
 
-In this new section we will see two important notions, that of delay with the `@` primitive, and that of feedback (from a looped circuit) which will require the use of the recursive composition `A~B` which allows to loop the outputs of A into the inputs of B and the outputs of B into the inputs of A.
+In this new section we will see two important notions, that of delay with the `@` primitive, and that of feedback (from a looped circuit) which will require the use of the recursive composition `A~B` which allows to loop the outputs of A into the inputs of B, and the outputs of B into the inputs of A.
 
 ### Example 1: Monophonic delay of 1 second
 
-Let's start with a very simple example, a monophonic delay of  1 seconds or 44100 samples. We will use the prefix notation :
+Let's start with a very simple example, a monophonic delay of  1 seconds or 44100 samples. We will use the prefix notation:
 
 
 <!-- faust-run -->
@@ -350,7 +340,7 @@ process = @(44100);
 
 ### Example 2: Delay of 0.1 second on the right channel
 
-To hear the delay better, let's put it only on the right channel and leave the left channel unchanged.
+To hear the delay better, let's put it only on the right channel and leave the left channel unchanged:
 
 <!-- faust-run -->
 ```
@@ -361,7 +351,7 @@ process = _, @(4410);
 
 ### Example 3: the bouncing of sound on a wall
 
-By combining a delay and an attenuation we can simulate the bouncing of sound on a wall.
+By combining a delay and an attenuation we can simulate the bouncing of sound on a wall:
 
 <!-- faust-run -->
 ```
@@ -371,10 +361,9 @@ process = _, bounce;
 <!-- /faust-run -->
 
 
-
 ### Example 4: A simple monophonic echo
 
-To simulate an echo, all we need to do is create a feedback loop. We'll use the recursive composition `A~B`.
+To simulate an echo, all we need to do is create a feedback loop. We'll use the recursive composition `A~B`:
 
 <!-- faust-run -->
 ```
@@ -382,13 +371,13 @@ bounce = @(4410) : *(0.75);
 monoecho = +~bounce;
 process = _, monoecho; 
 ```
-<!-- /faust-run -->
 
+<!-- /faust-run -->
 
 
 ### Example 5: A stereophonic echo
 
-Let's make a stereophonic echo with two monophonic echos in parallel
+Let's make a stereophonic echo with two monophonic echos in parallel:
 
 <!-- faust-run -->
 ```
@@ -398,12 +387,13 @@ stereoecho = monoecho,monoecho;
 
 process = stereoecho; 
 ```
+
 <!-- /faust-run -->
 
 
 ### Example 6: Adding parameters
 
-We will now generalize our echo with parameters to control its duration and feedback level.
+We will now generalize our echo with parameters to control its duration and feedback level:
 
 <!-- faust-run -->
 ```
@@ -413,12 +403,13 @@ stereoecho(d,f) = monoecho(d,f),monoecho(d,f);
 
 process = stereoecho(44100/4,0.75); 
 ```
+
 <!-- /faust-run -->
 
 
 ### Example 7: Slider for the feedback control
 
-We can now add a slider to control the level of feedback.
+We can now add a slider to control the level of feedback:
 
 <!-- faust-run -->
 ```
@@ -428,12 +419,13 @@ stereoecho(d,f) = monoecho(d,f),monoecho(d,f);
 
 process = stereoecho(44100/4, hslider("feedback", 0, 0, 1, 0.01)); 
 ```
+
 <!-- /faust-run -->
 
 
 ### Example 8: Freeze effect
 
-We would now like to prevent the sound level from rising indefinitely when we set the feedback level to 1. The idea is to gradually shut down the input when the feedback level exceeds a certain threshold.
+We would now like to prevent the sound level from rising indefinitely when we set the feedback level to 1. The idea is to gradually shut down the input when the feedback level exceeds a certain threshold:
 
 <!-- faust-run -->
 ```
@@ -445,9 +437,8 @@ stereoecho(d,f) = monoecho(d,f),monoecho(d,f);
 
 process = stereoecho(44100/4, hslider("feedback", 0, 0, 1, 0.01)); 
 ```
+
 <!-- /faust-run -->
-
-
 
 
 ## Part 3: Basic Oscillators
@@ -473,12 +464,13 @@ The ramp is produced by the following program :
 ```
 process = 0.125 : + ~ _;
 ```
+
 <!-- /faust-run -->
 
 
 ### Semantics
 
-To understand the above diagram, we will annotate it with its mathematical semantics.
+To understand the above diagram, we will annotate it with its mathematical semantics:
 
 <img src="img/ramp-diag-math.svg" width="100%" class="mx-auto d-block">
 
@@ -526,13 +518,14 @@ decimalpart(x) = x-int(x);
 phase = 0.125 : (+ : decimalpart) ~ _;
 process = phase;
 ```
+
 <!-- /faust-run -->
 
 In our definition of `phase `, the value of the step, here `0.125`, controls the frequency of the generated signal. We would like to calculate this step value as a function of the desired frequency. In order to do the conversion, we need to know the sampling frequency. It is available in the standard library as `ma.SR`. To use this standard library we add the following line to the program: `import("stdfaust.lib");`.
 
 Suppose we want our phase signal to have a frequency of 1 Hz, then the step should be very small `1/ma.SR`, so that it takes `ma.SR` samples (i.e. 1 second) for the phase signal to go from 0 to 1.
 
-If we want a frequency of 440 Hz, we need a 440 times larger step so that the phase signal goes from 0 to 1440 times faster.
+If we want a frequency of 440 Hz, we need a 440 times larger step so that the phase signal goes from 0 to 1440 times faster:
 
 ```
 phase = 440/ma.SR : (+ : decimalpart) ~ _;
@@ -544,7 +537,7 @@ This definition can be generalized by replacing `440` with an `f` parameter:
 phase(f) = f/ma.SR : (+ : decimalpart) ~ _;
 ```
 
-and changing the desired frequency to `phase`::
+and changing the desired frequency to `phase`:
 
 ```
 process = phase(440);
@@ -608,7 +601,7 @@ process = osc(440);
 <!-- /faust-run -->
 
 
-But now that we have seen how to create a sinusoidal oscillator from scratch, we will use the one defined in the standard Faust libraries.
+But now that we have seen how to create a sinusoidal oscillator from scratch, we will use the one defined in the standard Faust libraries:
 
 <!-- faust-run -->
 ```
@@ -620,7 +613,7 @@ process = os.osc(440);
 
 ### Example 2: a sine wave with volume control
 
-In this second example we used a horizontal slider `hslider(...)` to control the sound level. 
+In this second example we used a horizontal slider `hslider(...)` to control the sound level:
 
 <!-- faust-run -->
 ```
@@ -635,7 +628,8 @@ The first parameter is a string that indicates the name of the slider. It is fol
 
 ### Example 3: Exercise, add a frequency control
 
-As an exercise, replace, in the previous example, the frequency 440 by a horizontal slider whose name will be ``freq``, the default value `110`, the minimum value `40`, the maximum value `8000` and the step `1`.
+As an exercise, replace, in the previous example, the frequency 440 by a horizontal slider whose name will be ``freq``, the default value `110`, the minimum value `40`, the maximum value `8000` and the step `1`:
+
 <!-- faust-run -->
 ```
 import("stdfaust.lib");
@@ -647,7 +641,8 @@ process = os.osc(440 /*to replace*/) * hslider("gain", 0.1, 0, 1, 0.01);
 
 ### Example 4: Frequency aliasing phenomenon beyond SR/2
 
-A well known problem in the field of digital sound synthesis is frequency aliasing: any frequency beyond half the sampling frequency is _folded_ in the audible spectrum.  
+A well known problem in the field of digital sound synthesis is frequency aliasing: any frequency beyond half the sampling frequency is _folded_ in the audible spectrum:
+
 
 <!-- faust-run -->
 ```
@@ -656,13 +651,14 @@ import("stdfaust.lib");
 // A frequency aliasing phenomenon if one goes beyond SR/2
 
 process = os.osc(hslider("freq", 440, 20, 20000, 1)) * hslider("gain", 0.1, 0, 1, 0.01);
-
 ```
+
 <!-- /faust-run -->
 
 ### Example 5: Additive synthesis
 
-An example of an additive synthesis, where the level of each partial can be set individually. 
+An example of an additive synthesis, where the level of each partial can be set individually:
+
 <!-- faust-run -->
 ```
 import("stdfaust.lib");
@@ -675,12 +671,13 @@ partial(n,f) = os.osc(f*n) * hslider("partial %n", 0.25, 0, 1, 0.01);
 
 process = sum(i, 4, partial(i+1,hslider("freq", 440, 20, 8000, 0.001)));
 ```
+
 <!-- /faust-run -->
 Note the use of the `sum(i, n, foo(i))` construction which is equivalent to `foo(0)+foo(1)+...+foo(n-1)`.
 
 
 ### Example 6: Approximation of a square signal by additive synthesis
-We saw earlier how to produce a perfect square wave signal. This perfect square signal contains an infinite number of harmonics which, due to sampling, will fold over the audible spectrum, resulting in a less accurate, noisy sound! A square signal can be approximated by additive synthesis, by adding an infinite series of odd harmonics (see [https://en.wikipedia.org/wiki/Square_wave](https://en.wikipedia.org/wiki/Square_wave)).
+We saw earlier how to produce a perfect square wave signal. This perfect square signal contains an infinite number of harmonics which, due to sampling, will fold over the audible spectrum, resulting in a less accurate, noisy sound! A square signal can be approximated by additive synthesis, by adding an infinite series of odd harmonics (see [https://en.wikipedia.org/wiki/Square_wave](https://en.wikipedia.org/wiki/Square_wave)):
 
 <!-- faust-run -->
 ```
@@ -692,12 +689,13 @@ squarewave(f) = 4/ma.PI*sum(k, 4, os.osc((2*k+1)*f)/(2*k+1));
 
 process = squarewave(55);
 ```
+
 <!-- /faust-run -->
 As an exercise, change the number of harmonics to see the approximation improve (but do not exceed SR/2).
 
 ### Example 7: Approximation of a sawtooth signal by additive synthesis
 
-Similarly, a sawtooth signal can be approximated by additive synthesis, by adding an infinite series of harmonics (see [https://en.wikipedia.org/wiki/Sawtooth_wave](https://en.wikipedia.org/wiki/Sawtooth_wave)).
+Similarly, a sawtooth signal can be approximated by additive synthesis, by adding an infinite series of harmonics (see [https://en.wikipedia.org/wiki/Sawtooth_wave](https://en.wikipedia.org/wiki/Sawtooth_wave)):
 
 <!-- faust-run -->
 ```
@@ -709,13 +707,12 @@ sawtooth(f) = 2/ma.PI*sum(k, 4, (-1)^k * os.osc((k+1)*f)/(k+1));
 
 process = sawtooth(55);
 ```
-<!-- /faust-run -->
 
+<!-- /faust-run -->
 
 ### Example 8: Band limited oscillators
 
-The problem of aliasing can be solved using band-limited oscillators available in Faust libraries.
-
+The problem of aliasing can be solved using band-limited oscillators available in Faust libraries:
 
 <!-- faust-run -->
 ```
@@ -730,6 +727,7 @@ sawtooth(f) = phase(f) * 2 - 1;
 
 process = os.sawN(3,400);
 ```
+
 <!-- /faust-run -->
 
 
@@ -740,29 +738,29 @@ Subtractive synthesis is the opposite of additive synthesis. It consists in star
 
 ### Example 1 : a white noise
 
-A white noise generator
+A white noise generator:
+
 <!-- faust-run -->
 ```
 import("stdfaust.lib");
 
 process = no.noise * hslider("noise", 0.5, 0, 1, 0.01);
 ```
+
 <!-- /faust-run -->
 
 ### Example 2 : lowpass
-
 
 <!-- faust-run -->
 ```
 import("stdfaust.lib");
 
 process = no.noise * hslider("noise", 0.5, 0, 1, 0.01) : fi.lowpass(3, hslider("hifreq", 2000, 20, 20000, 1));
-
 ```
+
 <!-- /faust-run -->
 
 ### Example 3 : high pass
-
 
 <!-- faust-run -->
 ```
@@ -771,10 +769,10 @@ import("stdfaust.lib");
 process = no.noise * hslider("noise", 0.5, 0, 1, 0.01) : fi.highpass(3, hslider("lowfreq", 400, 20, 20000, 1));
 
 ```
+
 <!-- /faust-run -->
 
 ### Example 4 : bandpass
-
 
 <!-- faust-run -->
 ```
@@ -783,12 +781,10 @@ import("stdfaust.lib");
 process = no.noise * hslider("noise", 0.5, 0, 1, 0.01) 
 : fi.highpass(3, hslider("lowfreq", 400, 20, 20000, 1))
 : fi.lowpass(3, hslider("hifreq", 2000, 20, 20000, 1));
-
 ```
 <!-- /faust-run -->
 
 ### Example 5 : resonnant
-
 
 <!-- faust-run -->
 ```
@@ -805,7 +801,6 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01)
 
 ### Example 6 : fir
 
-
 <!-- faust-run -->
 ```
 import("stdfaust.lib");
@@ -821,7 +816,6 @@ transformation = @(1) : *(hslider("gain", 0, -1, 1, 0.1));
 
 ### Example 7 : iir
 
-
 <!-- faust-run -->
 ```
 import("stdfaust.lib");
@@ -834,9 +828,7 @@ transformation = @(0) : *(hslider("gain", 0, -0.95, 0.95, 0.01));
 ```
 <!-- /faust-run -->
 
-
 ### Example 8 : comb filter
-
 
 <!-- faust-run -->
 ```
@@ -849,7 +841,6 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01) :
 transformation = @(hslider("delay", 0, 0, 20, 1)) : *(hslider("gain", 0, -0.98, 0.98, 0.01));
 ```
 <!-- /faust-run -->
-
 
 ### Example 9 : Karplus Strong (1/2)
 
@@ -888,7 +879,6 @@ moyenne(x) = (x+x')/2;
 envelop = button("gate") : upfront : en.ar(0.002, 0.01);
 
 upfront(x) = x>x';
-
 ```
 <!-- /faust-run -->
 
@@ -1003,7 +993,6 @@ string(coef, freq, t60, level, trig) = no.noise*level
 		random  		= +(12345)~*(1103515245);
 		noise   		= random/2147483647.0;
 	};
-
 ```
 <!-- /faust-run -->
 
@@ -1011,7 +1000,6 @@ string(coef, freq, t60, level, trig) = no.noise*level
 <img src="img/bande-fm.png" width="100%" class="mx-auto d-block">
 
 ### Example 1 : frequency modulation
-
 
 <!-- faust-run -->
 ```
@@ -1031,9 +1019,7 @@ process = FM(
 ```
 <!-- /faust-run -->
 
-
 ### Example 2 : frequency modulation with envelops
-
 
 <!-- faust-run -->
 ```
@@ -1055,11 +1041,8 @@ envelop1 = button("gate") : upfront : en.ar(0.001, 1);
 envelop2 = button("gate") : upfront : en.ar(0.5, 0.5);
 
 upfront(x) = x>x';
-
 ```
 <!-- /faust-run -->
-
-
 
 # Further readings
 
