Typos and fix code error in 2020-04-10-faust-101.

--- a/src/workshops/2020-04-10-faust-101.md
+++ b/src/workshops/2020-04-10-faust-101.md
@@ -255,7 +255,7 @@ mute = *(1-checkbox("mute"));
 
 monoamp = *(vslider("volume[style:knob]", 0.1, 0, 1, 0.01)) : mute;
 
-stereoamp = monoamp,monoamp;
+stereoamp = monoamp, monoamp;
 
 process = stereoamp;
 ```
@@ -273,7 +273,7 @@ mute = *(1-checkbox("mute"));
 
 monoamp = *(vslider("volume[style:knob]", 0.1, 0, 1, 0.01)) : mute;
 
-stereoamp = hgroup("Marshall",monoamp,monoamp);
+stereoamp = hgroup("Marshall", monoamp, monoamp);
 
 process = stereoamp;
 ```
@@ -291,7 +291,7 @@ mute = *(1-checkbox("mute"));
 
 monoamp(c) = *(vslider("volume %c[style:knob]", 0.1, 0, 1, 0.01)) : mute;
 
-stereoamp = hgroup("Marshall",monoamp(0),monoamp(1));
+stereoamp = hgroup("Marshall", monoamp(0), monoamp(1));
 
 process = stereoamp;
 ```
@@ -325,7 +325,7 @@ In this new section we will see two important notions, that of delay with the `@
 
 ### Example 1: Monophonic delay of 1 second
 
-Let's start with a very simple example, a monophonic delay of  1 seconds or 44100 samples. We will use the prefix notation:
+Let's start with a very simple example, a monophonic delay of 1 seconds or 44100 samples. We will use the prefix notation:
 
 
 <!-- faust-run -->
@@ -333,7 +333,7 @@ Let's start with a very simple example, a monophonic delay of  1 seconds or 4410
 process = @(44100); 
 
 // equivalent to core syntax
-// process = _, 44100 ; @;
+// process = _, 44100 : @;
 ```
 <!-- /faust-run -->
 
@@ -383,7 +383,7 @@ Let's make a stereophonic echo with two monophonic echos in parallel:
 ```
 bounce = @(44100/4) : *(0.75);
 monoecho = +~bounce;
-stereoecho = monoecho,monoecho;
+stereoecho = monoecho, monoecho;
 
 process = stereoecho; 
 ```
@@ -399,7 +399,7 @@ We will now generalize our echo with parameters to control its duration and feed
 ```
 bounce(d,f) = @(d) : *(f);
 monoecho(d,f) = +~bounce(d,f);
-stereoecho(d,f) = monoecho(d,f),monoecho(d,f);
+stereoecho(d,f) = monoecho(d,f), monoecho(d,f);
 
 process = stereoecho(44100/4,0.75); 
 ```
@@ -415,7 +415,7 @@ We can now add a slider to control the level of feedback:
 ```
 bounce(d,f) = @(d) : *(f);
 monoecho(d,f) = +~bounce(d,f);
-stereoecho(d,f) = monoecho(d,f),monoecho(d,f);
+stereoecho(d,f) = monoecho(d,f), monoecho(d,f);
 
 process = stereoecho(44100/4, hslider("feedback", 0, 0, 1, 0.01)); 
 ```
@@ -431,9 +431,9 @@ We would now like to prevent the sound level from rising indefinitely when we se
 ```
 bounce(d,f) = @(d) : *(f);
 
-monoecho(d,f) = *(g) : +~bounce(d,f) with { g = 1 - max(0, f-l)/(1-l); l = 0.95;};
+monoecho(d,f) = *(g) : +~bounce(d,f) with { g = 1 - max(0, f-l)/(1-l); l = 0.95; };
 
-stereoecho(d,f) = monoecho(d,f),monoecho(d,f);
+stereoecho(d,f) = monoecho(d,f), monoecho(d,f);
 
 process = stereoecho(44100/4, hslider("feedback", 0, 0, 1, 0.01)); 
 ```
@@ -669,7 +669,7 @@ import("stdfaust.lib");
 // n = partial number startibng at 1
 partial(n,f) = os.osc(f*n) * hslider("partial %n", 0.25, 0, 1, 0.01);
 
-process = sum(i, 4, partial(i+1,hslider("freq", 440, 20, 8000, 0.001)));
+process = sum(i, 4, partial(i+1, hslider("freq", 440, 20, 8000, 0.001)));
 ```
 
 <!-- /faust-run -->
@@ -853,9 +853,9 @@ import("stdfaust.lib");
 process = no.noise * hslider("noise", 0.5, 0, 1, 0.01) :
         + ~ transformation;
         
-transformation = @(hslider("delay", 0, 0, 200, 1)) : moyenne : *(hslider("gain", 0, -0.98, 0.98, 0.01));
+transformation = @(hslider("delay", 0, 0, 200, 1)) : mean : *(hslider("gain", 0, -0.98, 0.98, 0.01));
 
-moyenne(x) = (x+x')/2;
+mean(x) = (x+x')/2;
 ```
 <!-- /faust-run -->
 
@@ -872,9 +872,9 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01)
         : *(envelop)
         : + ~ transformation;
         
-transformation = @(hslider("delay", 0, 0, 200, 1)) : moyenne : *(hslider("gain", 0, -0.999, 0.999, 0.001));
+transformation = @(hslider("delay", 0, 0, 200, 1)) : mean : *(hslider("gain", 0, -0.999, 0.999, 0.001));
 
-moyenne(x) = (x+x')/2;
+mean(x) = (x+x')/2;
 
 envelop = button("gate") : upfront : en.ar(0.002, 0.01);
 
