Typos and fix code error in 2020-04-10-faust-101(2).

--- a/src/workshops/2020-04-10-faust-101.md
+++ b/src/workshops/2020-04-10-faust-101.md
@@ -9,7 +9,6 @@ The documentation and the examples we will use can be found here:
 
 - **[https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/](https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/)**
 
-
 All examples will be run in the online Faust IDE:
 
 - **[https://faustide.grame.fr](https://faustide.grame.fr)**
@@ -212,7 +211,7 @@ process = stereoamp;
 
 ### Example 11: Syntactic sugar
 
-We have used the core syntax of Faust so far. For example to multiply the incomming signal by `0.1` we wrote `_,0.1:*`. For numerical expressions this notation is not always the most convenient and sometimes we would prefer to use the more traditional infix notation and write instead `_*0.1`. We can also use the prefixed notation and write `*(0.1)`. 
+We have used the core syntax of Faust so far. For example to multiply the incoming signal by `0.1` we wrote `_,0.1:*`. For numerical expressions this notation is not always the most convenient and sometimes we would prefer to use the more traditional infix notation and write instead `_*0.1`. We can also use the prefixed notation and write `*(0.1)`. 
 
 Let's rewrite the definition of the monoamp using the prefix notation:
 
@@ -430,9 +429,7 @@ We would now like to prevent the sound level from rising indefinitely when we se
 <!-- faust-run -->
 ```
 bounce(d,f) = @(d) : *(f);
-
 monoecho(d,f) = *(g) : +~bounce(d,f) with { g = 1 - max(0, f-l)/(1-l); l = 0.95; };
-
 stereoecho(d,f) = monoecho(d,f), monoecho(d,f);
 
 process = stereoecho(44100/4, hslider("feedback", 0, 0, 1, 0.01)); 
@@ -641,7 +638,7 @@ process = os.osc(440 /*to replace*/) * hslider("gain", 0.1, 0, 1, 0.01);
 
 ### Example 4: Frequency aliasing phenomenon beyond SR/2
 
-A well known problem in the field of digital sound synthesis is frequency aliasing: any frequency beyond half the sampling frequency is _folded_ in the audible spectrum:
+A well known problem in the field of digital sound synthesis is frequency [aliasing](https://en.wikipedia.org/wiki/Aliasing): any frequency beyond half the sampling frequency is _folded_ in the audible spectrum:
 
 
 <!-- faust-run -->
@@ -666,7 +663,7 @@ import("stdfaust.lib");
 //----------------------------------------------------------------------
 // partial(f,n);
 // f = frequency in Hz
-// n = partial number startibng at 1
+// n = partial number starting at 1
 partial(n,f) = os.osc(f*n) * hslider("partial %n", 0.25, 0, 1, 0.01);
 
 process = sum(i, 4, partial(i+1, hslider("freq", 440, 20, 8000, 0.001)));
@@ -677,6 +674,7 @@ Note the use of the `sum(i, n, foo(i))` construction which is equivalent to `foo
 
 
 ### Example 6: Approximation of a square signal by additive synthesis
+
 We saw earlier how to produce a perfect square wave signal. This perfect square signal contains an infinite number of harmonics which, due to sampling, will fold over the audible spectrum, resulting in a less accurate, noisy sound! A square signal can be approximated by additive synthesis, by adding an infinite series of odd harmonics (see [https://en.wikipedia.org/wiki/Square_wave](https://en.wikipedia.org/wiki/Square_wave)):
 
 <!-- faust-run -->
@@ -736,7 +734,7 @@ process = os.sawN(3,400);
 
 Subtractive synthesis is the opposite of additive synthesis. It consists in starting from a rich sound, for example white noise, and sculpting its spectrum.
 
-### Example 1 : a white noise
+### Example 1: a white noise
 
 A white noise generator:
 
@@ -749,7 +747,7 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01);
 
 <!-- /faust-run -->
 
-### Example 2 : lowpass
+### Example 2: lowpass
 
 <!-- faust-run -->
 ```
@@ -760,7 +758,7 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01) : fi.lowpass(3, hslider("
 
 <!-- /faust-run -->
 
-### Example 3 : high pass
+### Example 3: high pass
 
 <!-- faust-run -->
 ```
@@ -772,7 +770,7 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01) : fi.highpass(3, hslider(
 
 <!-- /faust-run -->
 
-### Example 4 : bandpass
+### Example 4: bandpass
 
 <!-- faust-run -->
 ```
@@ -784,7 +782,7 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01)
 ```
 <!-- /faust-run -->
 
-### Example 5 : resonnant
+### Example 5: resonant
 
 <!-- faust-run -->
 ```
@@ -799,7 +797,7 @@ process = no.noise * hslider("noise", 0.5, 0, 1, 0.01)
 <!-- /faust-run -->
 
 
-### Example 6 : fir
+### Example 6: fir
 
 <!-- faust-run -->
 ```
@@ -814,7 +812,7 @@ transformation = @(1) : *(hslider("gain", 0, -1, 1, 0.1));
 <!-- /faust-run -->
 
 
-### Example 7 : iir
+### Example 7: iir
 
 <!-- faust-run -->
 ```
@@ -828,7 +826,7 @@ transformation = @(0) : *(hslider("gain", 0, -0.95, 0.95, 0.01));
 ```
 <!-- /faust-run -->
 
-### Example 8 : comb filter
+### Example 8: comb filter
 
 <!-- faust-run -->
 ```
@@ -842,7 +840,7 @@ transformation = @(hslider("delay", 0, 0, 20, 1)) : *(hslider("gain", 0, -0.98, 
 ```
 <!-- /faust-run -->
 
-### Example 9 : Karplus Strong (1/2)
+### Example 9: Karplus Strong (1/2)
 
 
 <!-- faust-run -->
@@ -860,7 +858,7 @@ mean(x) = (x+x')/2;
 <!-- /faust-run -->
 
 
-### Example 10 : Karplus Strong (2/2)
+### Example 10: Karplus Strong (2/2)
 
 
 <!-- faust-run -->
@@ -883,7 +881,7 @@ upfront(x) = x>x';
 <!-- /faust-run -->
 
 
-### Example 11 : Kisana
+### Example 11: Kisana
 
 
 <!-- faust-run -->
@@ -999,7 +997,7 @@ string(coef, freq, t60, level, trig) = no.noise*level
 ## Part 6: Synthesis by frequency modulation
 <img src="img/bande-fm.png" width="100%" class="mx-auto d-block">
 
-### Example 1 : frequency modulation
+### Example 1: frequency modulation
 
 <!-- faust-run -->
 ```
@@ -1019,7 +1017,7 @@ process = FM(
 ```
 <!-- /faust-run -->
 
-### Example 2 : frequency modulation with envelops
+### Example 2: frequency modulation with envelops
 
 <!-- faust-run -->
 ```
